<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="_2018">2018</string>
    <string name="delia_owens">Delia Owens</string>
    <string name="where_the_crawdads">Where the Crawdads</string>
    <string name="todo">TODO</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="enter_your_repassword">enter_your_repassword</string>
    <string name="register">register</string>
    <string name="cancel">cancel</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_out">sign_out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>