<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".signOutActivity">

    <EditText
        android:background="@drawable/shape_txt"
        android:padding="10dp"
        android:id="@+id/signout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signout_Password"
        android:background="@drawable/shape_txt"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signout_email" />

    <EditText
        android:id="@+id/signout_rePassword3"
        android:background="@drawable/shape_txt"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/enter_your_repassword"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/signout_Password" />

    <Button
        android:padding="5dp"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:background="@drawable/shape_btn"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signout_btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/signout_rePassword3" />

    <Button
        android:id="@+id/signout_btn_cancel"
        android:background="@drawable/shape_btn"
android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signout_rePassword3" />
</androidx.constraintlayout.widget.ConstraintLayout>